[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mix-extractor"
version = "0.1.0"
description = "Extract tracklists from DJ mix audio files using speech-to-text and LLMs"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.1",
    "ffmpeg-python>=0.2",
    "openai>=1.30",
    "anthropic>=0.28",
    "musicbrainzngs>=0.7",
    "spotipy>=2.23",
    "ytmusicapi>=1.7",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
assemblyai = ["assemblyai>=0.26"]
deepgram = ["deepgram-sdk>=3.4"]
local-whisper = ["openai-whisper>=20231117"]
discogs = ["discogs-client>=2.4"]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
]

[project.scripts]
mix-extractor = "mix_extractor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
